# kennisdelen-rust-demo

./: Cargo.toml
src/: lib.rs  main.rs
