[package]
name = "hangman"
version = "0.1.0"
authors = ["Philip Luyckx <philip.luyckx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hangman_lib"
path = "src/lib.rs"

[[bin]]
name = "hangman"
path = "src/main.rs"

[dependencies]
